...
    <string name="title_dictionary">Dictionary</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_photo">Photo</string>
    <string name="title_profile">Profile</string>


    <string name="str_logout">Log Out</string>
    <string name="str_delete_user">Delete User</string>
    <string name="str_edit_profile">Edit Profile</string>

    <string name="str_warning">Warning</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>

    <string name="str_generic_error">There is a problem. Try later</string>

    <string name="str_generic_backend_error">There is a problem with connection. Try later</string>

...
    <string name="str_surname_hint">Surname</string>
    <string name="str_mail_hint">E-Mail</string>
    <string name="str_password_hint">Password</string>
    <string name="str_repeat_password_hint">Repeat Password</string>
    <string name="str_login_text">Do you already have an account?</string>
    <string name="str_signup_text">You don\'t have an account?</string>
    <string name="str_login_button">Log In</string>
    <string name="str_forgot_password"><u>Password Forgotten?</u></string>
    <string name="str_password_no_match">Passwords do not match!</string>
    <string name="str_no_mail">Please, insert a valid e-mail.</string>
    <string name="str_credential_not_valid">Credential is not valid.</string>
    <string name="str_no_password">Please, insert a valid password.</string>
    <string name="str_password_not_valid">Specified password is not valid. The password must contains at least 8 characters, one lower-case, one upper-case, one number and one special character. It cannot contains spaces.</string>
    <string name="str_no_repeat_password">Please, repeat the password.</string>
    <string name="str_signup_network_error">There is a problem. Check your internet connectivity and retry.</string>
    <string name="str_mail_already_in_use_error">This e-mail is already in use. Try another one</string>
    <string name="str_password_weak_error">Specified password is too weak.</string>
    <string name="str_onboard_success">Onboard successfully completed. You will be redirected to Dashboard.</string>
    <string name="str_check_onboard">Checking your Data. Please Wait …</string>
    <string name="str_loading_data">We are loading your data. Please Wait …</string>
    <string name="str_send_reset_password_mail_ok">We have send you an e-mail to reset your password. Check also in the spam folder.</string>
    <string name="str_invalid_user_error">There is no user associated with this e-mail.</string>
    <string name="str_mail_not_verified">
        Your account is not verified. Please, verify your account by clicking on the verification
        link sent to your email. Click OK if you want us to resend the email.
    </string>
    <string name="str_send_verify_mail_ok">We have sent you an email to verify your account. Please, also check your spam folder.</string>
    <string name="str_signup_ok">Sign up completed successfully. Before logging in, verify your account via the email we have sent you.</string>
    <string name="str_too_may_request">Too many requests have been performed. Please, try again later.</string>

    <!-- end region - onboard -->

    <!-- inizio regione - quiz -->

    <string name="str_submit_button">Submit</string>
...
