...
                        app:layout_constraintTop_toBottomOf="@id/flowerIcon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/bottom_guideline">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayoutMail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:startIconDrawable="@drawable/ic_baseline_email_24dp"
                            app:endIconMode="clear_text"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputEditTextMail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_mail_hint"
                                android:inputType="textEmailAddress"
                                android:imeOptions="flagNoExtractUi" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputLayoutPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintEnd_toEndOf="parent"
...
                            app:layout_constraintTop_toBottomOf="@id/inputLayoutMail"
                            app:passwordToggleEnabled="true"
                            app:startIconDrawable="@drawable/ic_baseline_key_24dp"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/inputEditTextPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/str_password_hint"
                                android:inputType="textPassword"
                                android:imeOptions="flagNoExtractUi" />
                        </com.google.android.material.textfield.TextInputLayout>
...
                                android:hint="@string/str_repeat_password_hint"
                                android:inputType="textPassword"
                                android:imeOptions="flagNoExtractUi" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/forgotPasswordTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="8dp"
...
                    android:visibility="invisible"
                    app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onboardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingStart="64dp"
                    android:paddingEnd="64dp"
                    android:text="@{isLogin ? @string/str_login_button : @string/str_signup_button}"
...
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintTop_toBottomOf="@id/onboardProgressBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/switchModeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toBottomOf="@id/onboardButton"
                    app:layout_constraintEnd_toEndOf="parent"
...
